# llm-council

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  start.sh
.antigravitycli/: 5fada560-e9bf-4527-b8e3-944168dd5865.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: cloud_providers.py  council.py  main.py  models_manager.py  ollama.py  openrouter.py  pdf_generator.py  storage.py  system_info.py
frontend/: index.html
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: AutoModeForm.css  AutoModeForm.jsx  ChatInterface.css  ChatInterface.jsx  ConfirmDialog.css  ConfirmDialog.jsx  ManualResponseForm.css  ManualResponseForm.jsx  Settings.css  Settings.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.css  Stage2.jsx  Stage3.css  Stage3.jsx
frontend/src/utils/: autoModeSubmit.js  autoModeSubmit.test.js  conversationFlow.js  conversationFlow.test.js  councilMemory.js  councilMemory.test.js  modelFormatting.js  modelFormatting.test.js  modelRecommendations.js  modelRecommendations.test.js  pullProgress.js  pullProgress.test.js  synthesisProfiles.js  systemInfoPolling.js  systemInfoPolling.test.js
tests/: test_cloud_providers.py  test_council.py  test_main.py  test_storage.py
